<resources>

    <!-- Firebase References -->
    <string name="firebase_femaleSimpleAngle">female_simple_Angel</string>
    <!--TODO simple_angle -->
    <string name="firebase_maleSimpleAngle">male_simpleAngel</string>
    <string name="firebase_angel">angels</string>
    <string name="firebase_male_attendance">male_attendance</string>
    <string name="firebase_female_attendance">female_attendance</string>
    <string name="firebase_phone">phone</string>
    <string name="firebase_dob">dob</string>
    <string name="firebase_angle_last_update">mLastUpdate</string>
    <string name="firebase_angle_name">mName</string>
    <string name="firebase_angle_address">mAddress</string>
    <string name="firebase_angle_class">mClass</string>
    <string name="firebase_angle_coins">mCoins</string>
    <string name="firebase_angle_facebook">mFacebook</string>
    <string name="firebase_angle_father">mFather</string>
    <string name="firebase_angle_home_num">mHomeNum</string>
    <string name="firebase_angle_last_score">mLastScore</string>
    <string name="firebase_angle_score">mScore</string>
    <string name="firebase_angle_gender">mGender</string>

    <!-- Messages -->
    <string name="angel_added">تمت الاضافه</string>


    <string name="app_name">دولاب الخدمة</string>
    <string name="main_add_atten">تسجيل الحضور</string>
    <string name="main_activity">تسجيل الدخول</string>
    <string name="home_activity">الصفحة الرئيسية</string>
    <string name="main_trip">الانشطة</string>
    <string name="main_friday">برنامج الجمعة</string>
    <string name="main_dolab">الدولاب</string>
    <string name="main_log">كشف الاسماء</string>
    <string name="boys">اولاد</string>
    <string name="girls">بنات</string>
    <string name="active">الحضور</string>
    <string name="passive">الغياب</string>
    <string name="action_settings">Settings</string>
    <string name="person_s_image">Person\'s Image</string>
    <string name="activity_adding_name">الأسم</string>
    <string name="activity_adding_dob">تاريخ الميلاد</string>
    <string name="facebook">فيس بوك :</string>
    <string name="adding_angel_menu_save">حفظ</string>
    <string name="permission_denied">لم يتم الحصول على الإذن</string>
    <string name="removing_angel_dialog_msg">كدة انت هتمسح الواد اهدى و ركز كده انت متأكد ؟؟؟</string>
    <string name="removing_angel_dialog_title">مسح المخدوم</string>
    <string name="c_info">بيانات الاتصال</string>
    <string name="address">العنوان</string>
    <string name="home_num">رقم المنزل</string>
    <string name="rest_of_address">باقى العنوان</string>
    <string name="fb_profile">الصفحة الشخصية</string>
    <string name="mobile">الموبايل</string>
    <string name="mother_phone">رقم الام</string>
    <string name="father_phone">رقم الاب</string>
    <string name="angel_phone">رقم المخدوم</string>
    <string name="angel_removed">اتمسح</string>
    <string name="xml_class">الفصل</string>
    <string name="xml_att">الحضور</string>
    <string name="xml_coins">الكوينز</string>
    <string name="xml_score">الاسكور</string>
    <string name="facebook_profile">بروفايل فيسبوك</string>
    <string name="send_sms">ابعت رسالة</string>
    <string name="call">اتصل</string>
    <string name="call_dad">اتصل بالاب</string>
    <string name="call_mam">اتصل بالام</string>
    <string name="data_not_found">مش متسجل</string>
    <string name="varfication_mail_msg">بعتنا رسالة تأكيد للأيميل بتاعك</string>
    <string name="offline_varifation_msg">افتح النت و اكد الايميل</string>
    <string name="failed_msg">failed for some reason</string>
    <string name="not_updated">مش متحدث</string>
    <string name="last_update_title">اخر تحديث :</string>
    <string name="date">Date</string>

</resources>
