<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/a_m_facebook"
        android:title="@string/facebook_profile"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/a_m_call"
        android:title="@string/call"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/a_m_send_msg"
        android:title="@string/send_sms"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/a_m_call_dad"
        android:title="@string/call_dad"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/a_m_call_mam"
        android:title="@string/call_mam"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"
        />

</menu>