<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainBackgroundColor">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        tools:context="com.example.shafy.dolabelkhedma.ui.AddingAngelActivity">

        <LinearLayout
            android:id="@+id/ll_angel_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/photo_holder"
            android:elevation="2dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_angel_photo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/contact_avatar"
                android:contentDescription="@string/person_s_image" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_name"
            android:layoutDirection="ltr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/activity_adding_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/ll_angel_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ll_angel_photo" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/activity_adding_dob"
            android:inputType="date"
            android:textAlignment="viewEnd"
            android:layoutDirection="ltr"
            app:layout_constraintEnd_toEndOf="@+id/et_name"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <Spinner
            android:id="@+id/et_class"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:layoutDirection="ltr"
            android:minHeight="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/ll_angel_photo"
            app:layout_constraintEnd_toStartOf="@+id/ll_angel_photo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_name"
            app:layout_constraintTop_toBottomOf="@+id/et_dob"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/head1"
            android:layoutDirection="ltr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/c_info"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_angel_photo" />

        <View
            android:id="@+id/v_main_info_back"
            android:layout_width="0dp"
            android:layoutDirection="ltr"
            android:layout_height="0dp"
            android:background="@color/colorAccentLight"
            app:layout_constraintBottom_toTopOf="@+id/head2"
            app:layout_constraintEnd_toEndOf="@+id/head1"
            app:layout_constraintStart_toStartOf="@+id/head1"
            app:layout_constraintTop_toBottomOf="@+id/head1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:layoutDirection="ltr"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head1" />

        <EditText
            android:id="@+id/et_home_number"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/home_num"
            android:inputType="number"
            android:layoutDirection="ltr"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:hint="@string/rest_of_address"
            android:layoutDirection="ltr"
            android:inputType="text|textMultiLine"
            app:layout_constraintEnd_toStartOf="@+id/et_home_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_home_number" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5884058" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutDirection="ltr"
            android:text="@string/facebook"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/et_home_number"
            app:layout_constraintTop_toBottomOf="@+id/et_address" />

        <EditText
            android:id="@+id/et_fb_profile_url"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layoutDirection="ltr"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:hint="@string/fb_profile"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/mobile"
            android:layoutDirection="ltr"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_fb_profile_url" />

        <EditText
            android:id="@+id/et_angel_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/angel_phone"
            android:inputType="phone"
            android:layoutDirection="ltr"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/et_fb_profile_url"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/et_dad_phone"
            android:layout_width="0dp"
            android:layoutDirection="ltr"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/father_phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/et_angel_phone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_angel_phone"
            app:layout_constraintTop_toBottomOf="@+id/et_angel_phone" />

        <EditText
            android:id="@+id/et_mom_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layoutDirection="ltr"
            android:hint="@string/mother_phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/et_dad_phone"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="@+id/et_dad_phone"
            app:layout_constraintTop_toBottomOf="@+id/et_dad_phone" />

        <TextView
            android:id="@+id/head2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:layoutDirection="ltr"
            android:text="بيانات اخرى"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_mom_phone" />

        <View
            android:id="@+id/v_other_info_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layoutDirection="ltr"
            android:background="@color/colorAccentLight"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/head1"
            app:layout_constraintStart_toStartOf="@+id/head1"
            app:layout_constraintTop_toBottomOf="@+id/head2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="اب الاعتراف"
            android:layoutDirection="ltr"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head2" />

        <EditText
            android:id="@+id/et_p_father_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:layoutDirection="ltr"
            android:hint="الاسم"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="عدد الكوينز"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:layoutDirection="ltr"
            app:layout_constraintEnd_toEndOf="@+id/et_p_father_name"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/et_p_father_name" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="السكور"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:layoutDirection="ltr"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/et_p_father_name"
            app:layout_constraintTop_toBottomOf="@+id/et_p_father_name" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.61" />

        <EditText
            android:id="@+id/et_score"
            android:layoutDirection="ltr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_p_father_name"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/et_coins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:layoutDirection="ltr"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/et_p_father_name"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="16dp"
            android:text="النوع"
            android:layoutDirection="ltr"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_coins" />

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:checked="true"
            android:text="ذكر"
            android:layoutDirection="ltr"
            app:layout_constraintStart_toStartOf="@+id/et_coins"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="انثى"
            android:layoutDirection="ltr"
            app:layout_constraintStart_toStartOf="@+id/et_score"
            app:layout_constraintTop_toTopOf="@+id/rb_male" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:layoutDirection="ltr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_male" />

        <ImageView
            android:id="@+id/iv_dob_select"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_friday"
            android:layoutDirection="ltr"
            app:layout_constraintBottom_toBottomOf="@+id/et_dob"
            app:layout_constraintEnd_toStartOf="@+id/et_dob"
            app:layout_constraintStart_toStartOf="@+id/et_name"
            app:layout_constraintTop_toTopOf="@+id/et_dob" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
</layout>